--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/");
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 
 * {
     margin: 0;
