--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400");
 
 * {
     margin: 0;
