--- a/style.css
+++ b/style.css
@@ -9,5 +9,6 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;min-height: 100vh;
+    align-items: center;
+    min-height: 100vh;
 }
