--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100vh;background: #000;
 }
