--- a/style.css
+++ b/style.css
@@ -17,5 +17,6 @@ body {
 h2 {
     position: relative;
     margin: 0;
-    font-size: 4em;font-weight: 900;
+    font-size: 4em;
+    font-weight: 900;
 }
