--- a/style.css
+++ b/style.css
@@ -18,5 +18,6 @@ h2 {
     position: relative;
     margin: 0;
     font-size: 4em;
-    font-weight: 900;color: #fff;
+    font-weight: 900;
+    color: #fff;
 }
