--- a/style.css
+++ b/style.css
@@ -19,5 +19,6 @@ h2 {
     margin: 0;
     font-size: 4em;
     font-weight: 900;
-    color: #fff;z-index: 1;
+    color: #fff;
+    z-index: 1;
 }
