--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ h2 {
 h2::before {
     content: '';
     position: absolute;
-    left: 0;width: 120%;
+    left: 0;
+    width: 120%;
 }
 
 h2 span {
