--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ h2::before {
     position: absolute;
     left: 0;
     width: 120%;
-    height: 100%;background: linear-gradient();
+    height: 100%;
+    background: linear-gradient();
 }
 
 h2 span {
