--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2::before {
     left: 0;
     width: 120%;
     height: 100%;
-    background: linear-gradient(90deg, transparent 0%);
+    background: linear-gradient(90deg, transparent 0%,#000);
 }
 
 h2 span {
