--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ h2::before {
     left: 120%;
     width: 120%;
     height: 100%;
-    background: linear-gradient(90deg, transparent 0%, #000 5%, #000 100%);animation: animate;
+    background: linear-gradient(90deg, transparent 0%, #000 5%, #000 100%);
+    animation: animate;
 }
 
 h2 span {
