--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ h2 span {
     color: #ff022c;
 }
 
-video {position: absolute;}
+video {
+    position: absolute;
+}
 
 @keyframes animate {
     0% {
