--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ h2 span {
 video {
     position: absolute;
     top: 0;
-    left: 0;width: 100%;
+    left: 0;
+    width: 100%;
 }
 
 @keyframes animate {
