--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ video {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 @keyframes animate {
