--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ video {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;object-fit: cover;
+    height: 100%;
+    object-fit: cover;
 }
 
 @keyframes animate {
