--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;z-index: 0;
+    object-fit: cover;
+    z-index: 0;
 }
 
 @keyframes animate {
