--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ video {
     height: 100%;
     object-fit: cover;
     z-index: 2;
-    pointer-events: none;mix-blend-mode: ;
+    pointer-events: none;
+    mix-blend-mode: ;
 }
 
 @keyframes animate {
