--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ h2::before {
     width: 120%;
     height: 100%;
     background: linear-gradient(90deg, transparent 0%, #000 5%, #000 100%);
-    animation: animate 5.5s linear forwards;animation-delay: 2s;
+    animation: animate 5.5s linear forwards;
+    animation-delay: 2s;
 }
 
 h2 span {
