--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 h2 {
     position: relative;
-    margin: 0;
+    margin: 20px 0 0;
     font-size: 4em;
     font-weight: 900;
     color: #fff;
