--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ video {
 
 @keyframes animate {
     0% {
-        left: 110%;right: 100%;
+        left: 110%;
+        right: 100%;
     }
 
     100% {
